--- a/_portfolio/2.1-PPO.md
+++ b/_portfolio/2.1-PPO.md
@@ -5,7 +5,7 @@ collection: portfolio
 ---
 This notebook contains my implementation of the Proximal Policy Optimization algorithm, tested within the LunarLanderContinuous-v2 Gymnasium environment.
 
-Information about this environment can be found here: https://gymnasium.farama.org/environments/box2d/lunar_lander/
+Information about this environment can be found [here](https://gymnasium.farama.org/environments/box2d/lunar_lander/).
 
 In this environment, the robot is tasked with piloting the lander into the center of a designated landing zone, without the body of the lander contacting the surface. The complete reward function has many factors involved, which can all be found at the above link.
 
@@ -25,7 +25,7 @@ from torch.distributions import Normal
 import matplotlib.pyplot as plt
 ```
 
-The cell below implements the Actor network, the Critic network, and the PPOAgent. The actor network outputs a $\mu$ and $std$ for each action dimension, which is then used to create and sample from a normal distribution. The critic network outputs a single value corresponding to the current state. Both networks input the current state vector.  
+The cell below implements the Actor network, the Critic network, and the PPOAgent. The actor network outputs a *\mu* and *std* for each action dimension, which is then used to create and sample from a normal distribution. The critic network outputs a single value corresponding to the current state. Both networks input the current state vector.  
   
 The PPOAgent instantiates an Actor network and a Critic network, as well as a shared optimizer, meant to introduce stability into the training step of the networks. Three additional functions are provided. First, select_action() allows for a state vector to be input, and will input that through the actor network, and sample an action based upon the output. This function returns the action vector, the log probability of that action, and the entropy of the distribution for that action. Second, the compute_gae() function allows for the computation of the generalized advantage estimation for each timestep in the collected batch of experiences, returning a returns vector and an advantages vector. Lastly, the update() function performs the minibatch generation and update loop for the two networks based upon the PPO algorithm. 
 
