Added gifs, checking format.

--- a/_portfolio/1.5-PPO_IsaacLab.md
+++ b/_portfolio/1.5-PPO_IsaacLab.md
@@ -1,6 +1,6 @@
 ---
 title: "Proximal Policy Optimization within IsaacLab"
-excerpt: "Implementation of the Proximal Policy Optimization (PPO) algorithm, tested with multiple environments within IsaacLab"
+excerpt: "Implementation of the Proximal Policy Optimization (PPO) algorithm, tested with multiple environments within IsaacLab<br><img src='/images/ppo_cabinet.gif'>"
 collection: portfolio
 ---
 Previously, I have implemented the PPO algorithm to work within multiple gymnasium environments, including Atari Pong. I adjusted my PPO implementation to work with multiple environments within the IsaacLab, a gym-like framework within NVIDIA IsaacSim. A number of adjustments had to be made to improve the performance of the algorithm, as these environments provide a more difficult problem, and highlighted some issues my previous implementation had.  
@@ -12,7 +12,7 @@ These issues I found in my implementation and subsequently fixed are as follows:
 
 The plots below show the training progress for each environment:  
 
-<img src='/images/training_plot_episodes_Isaac-Cartpole-v0.png'>  
+<img src='/images/training_plot_episodes_Isaac-Cartpole-v0.png'> <img src='/images/isaac_cartpole.gif'>  
 <img src='/images/training_plot_episodes_Isaac-Reach-Franka-v0.png'>  
-<img src='/images/training_plot_episodes_Isaac-Open-Drawer-Franka-v0.png'>  
+<img src='/images/training_plot_episodes_Isaac-Open-Drawer-Franka-v0.png'> <img src='/images/ppo_cabinet.gif'>  
  
