--- a/_portfolio/1.5-PPO_IsaacLab.md
+++ b/_portfolio/1.5-PPO_IsaacLab.md
@@ -11,8 +11,13 @@ These issues I found in my implementation and subsequently fixed are as follows:
 - Lastly, my implementation was struggling when compared to some of the implementations provided with IsaacLab, and I found that Observation Normalization could improve the performance. Previously, I have utilized min/max normalization, however these environments do not have a defined min/max for their observations. I am utilizing the RSL-RL implementation of Welfords Algorithm to do this.
 
 The plots below show the training progress for each environment:  
-
-<img src='/images/training_plot_episodes_Isaac-Cartpole-v0.png' width='50%'> <img src='/images/isaac_cartpole.gif' width="50%">  
-<img src='/images/training_plot_episodes_Isaac-Reach-Franka-v0.png' width='50%'>  
-<img src='/images/training_plot_episodes_Isaac-Open-Drawer-Franka-v0.png' width='50%'> <img src='/images/ppo_cabinet.gif' width="50%">  
+<p float="left">
+    <img src='/images/training_plot_episodes_Isaac-Cartpole-v0.png' width='50%'> <img src='/images/isaac_cartpole.gif' width="50%">  
+</p>
+<p float="left">
+    <img src='/images/training_plot_episodes_Isaac-Reach-Franka-v0.png' width='50%'>  
+</p>
+<p float="left">
+    <img src='/images/training_plot_episodes_Isaac-Open-Drawer-Franka-v0.png' width='50%'> <img src='/images/ppo_cabinet.gif' width="50%">  
+</p>
  
