--- a/_portfolio/1.5-PPO_IsaacLab.md
+++ b/_portfolio/1.5-PPO_IsaacLab.md
@@ -12,15 +12,15 @@ These issues I found in my implementation and subsequently fixed are as follows:
 
 The plots below show the training progress for each environment:  
 <p float="left">
-    <img src='/images/training_plot_episodes_Isaac-Cartpole-v0.png' width='40%'> <img src='/images/isaac_cartpole.gif' width="40%">  
+    <img src='/images/training_plot_episodes_Isaac-Cartpole-v0.svg' onerror this.src='/images/training_plot_episodes_Isaac-Cartpole-v0.png' width='40%'> <img src='/images/isaac_cartpole.gif' width="40%">  
 </p>
 <p float="left">
-    <img src='/images/training_plot_episodes_Isaac-Reach-Franka-v0.png' width='40%'> <img src='/images/isaac_reach.gif' width="40%"> 
+    <img src='/images/training_plot_episodes_Isaac-Reach-Franka-v0.svg' onerror this.src='/images/training_plot_episodes_Isaac-Reach-Franka-v0.png' width='40%'> <img src='/images/isaac_reach.gif' width="40%"> 
 </p>
 <p float="left">
-    <img src='/images/training_plot_episodes_Isaac-Lift-Cube-Franka-v0.png' width='40%'> <img src='/images/isaac_lift.gif' width="40%">  
+    <img src='/images/training_plot_episodes_Isaac-Lift-Cube-Franka-v0.svg' onerror this.src='/images/training_plot_episodes_Isaac-Lift-Cube-Franka-v0.png' width='40%'> <img src='/images/isaac_lift.gif' width="40%">  
 </p>
 <p float="left">
-    <img src='/images/training_plot_episodes_Isaac-Open-Drawer-Franka-v0.png' width='40%'> <img src='/images/isaac_cabinet.gif' width="40%">  
+    <img src='/images/training_plot_episodes_Isaac-Open-Drawer-Franka-v0.svg' onerror this.src='/images/training_plot_episodes_Isaac-Open-Drawer-Franka-v0.png' width='40%'> <img src='/images/isaac_cabinet.gif' width="40%">  
 </p>
  
