--- a/_portfolio/1.5-PPO_IsaacLab.md
+++ b/_portfolio/1.5-PPO_IsaacLab.md
@@ -1,6 +1,6 @@
 ---
 title: "Proximal Policy Optimization within IsaacLab"
-excerpt: "Implementation of the Proximal Policy Optimization (PPO) algorithm, tested with multiple environments within IsaacLab<br><img src='/images/isaac_cabinet.gif' width='50%'>"
+excerpt: "Implementation of the Proximal Policy Optimization (PPO) algorithm, tested with multiple environments within IsaacLab<br><img src='/images/isaac_drawer.gif' width='50%'>"
 collection: portfolio
 ---
 Previously, I have implemented the PPO algorithm to work within multiple gymnasium environments, including Atari Pong. I adjusted my PPO implementation to work with multiple environments within the IsaacLab, a gym-like framework within NVIDIA IsaacSim. A number of adjustments had to be made to improve the performance of the algorithm, as these environments provide a more difficult problem, and highlighted some issues my previous implementation had.  
@@ -21,6 +21,6 @@ The plots below show the training progress for each environment:
     <img src='/images/training_plot_episodes_Isaac-Lift-Cube-Franka-v0.svg' onerror this.src='/images/training_plot_episodes_Isaac-Lift-Cube-Franka-v0.png' width='49%'> <img src='/images/isaac_lift.gif' width="49%">  
 </p>
 <p float="left">
-    <img src='/images/training_plot_episodes_Isaac-Open-Drawer-Franka-v0.svg' onerror this.src='/images/training_plot_episodes_Isaac-Open-Drawer-Franka-v0.png' width='49%'> <img src='/images/isaac_cabinet.gif' width="49%">  
+    <img src='/images/training_plot_episodes_Isaac-Open-Drawer-Franka-v0.svg' onerror this.src='/images/training_plot_episodes_Isaac-Open-Drawer-Franka-v0.png' width='49%'> <img src='/images/isaac_drawer.gif' width="49%">  
 </p>
  
