Fixed gifs for LunarLander and Pong

--- a/_portfolio/2.1-PPO.md
+++ b/_portfolio/2.1-PPO.md
@@ -1,6 +1,6 @@
 ---
 title: "Proximal Policy Optimization, Deep Reinforcement Learning"
-excerpt: "Implementation of the Proximal Policy Optimization (PPO) algorithm, tested with the Lunar Lander Gymnasium environment<br/><img src='/images/website_ppo.gif'>"
+excerpt: "Implementation of the Proximal Policy Optimization (PPO) algorithm, tested with the Lunar Lander Gymnasium environment<br/><img src='/images/lander_ppo.gif'>"
 collection: portfolio
 ---
 This notebook contains my implementation of the Proximal Policy Optimization algorithm, tested within the LunarLanderContinuous-v2 Gymnasium environment.
