Added the cube repose task results

--- a/_portfolio/1.5-PPO_IsaacLab.md
+++ b/_portfolio/1.5-PPO_IsaacLab.md
@@ -23,4 +23,6 @@ The plots below show the training progress for each environment:
 <p float="left">
     <img src='/images/training_plot_episodes_Isaac-Open-Drawer-Franka-v0.svg' onerror this.src='/images/training_plot_episodes_Isaac-Open-Drawer-Franka-v0.png' width='49%'> <img src='/images/isaac_drawer.gif' width="49%">  
 </p>
- 
+ <p float="left">
+    <img src='/images/training_plot_episodes_Isaac-Repose-Cube-Allegro-Direct-v0.svg' onerror this.src='/images/training_plot_episodes_Isaac-Repose-Cube-Allegro-Direct-v0.png' width='49%'> <img src='/images/isaac_repose_allegro.gif' width="49%">  
+</p>
