--- a/_portfolio/2.1-PPO_Sim2Real.md
+++ b/_portfolio/2.1-PPO_Sim2Real.md
@@ -1,6 +1,6 @@
 ---
 title: "PPO Control with the Standard Open ARM101"
-excerpt: "Implementation of the Proximal Policy Optimization (PPO) algorithm, tested with the Standard Open ARM101 in IsaacLab and deployed in the real world<br/><img src='/images/so101_lift.gif'>"
+excerpt: "Implementation of the Proximal Policy Optimization (PPO) algorithm, tested with the Standard Open ARM101 in IsaacLab and deployed in the real world<br/><img src='/images/so101_lift.gif' width='25%'>"
 collection: portfolio
 ---
 Using my implementation of PPO, I wanted to train a model within the IsaacLab simulator, and deploy it on a real-world robot, the SO-ARM101. Currently, I have trained two policies for the robot, and I am currently in the process of deploying the model to the real world. I am awaiting my robot arm to arrive, which I will then need to assemble and test. I am currently working on the necessary code development to transition the model from IsaacLab to the real-world. 
